--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,23 @@
 
 /* Your CSS Code here. */
+
+thead{
+	background-color:red;
+	color:white;
+}.waist{
+	background-color:lightcoral;
+	color:white;
+}
+.chest{
+	background-color:lightpink;
+	color:black;
+}
+.sleeve{
+	background-color:grey;
+	color:black;
+}
+. table {
+            border-collapse: collapse;
+            width: 100%;
+			border: 1px solid black;        }
+        
